--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mochi-web",
   "private": true,
   "scripts": {
-    "dev": "yarn && next",
+    "dev": "yarn && next-remote-watch ./data",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
@@ -19,8 +19,11 @@
     "class-variance-authority": "^0.6.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "^13.4.10",
+    "next-mdx-remote": "^4.4.1",
+    "next-remote-watch": "^2.0.0",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
     "qs": "^6.11.2",
