--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-remote-watch": "^2.0.0",
     "nprogress": "^0.2.0",
+    "overlayscrollbars": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.0"
