--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "etag": "^1.8.1",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next": "^13.4.10",
     "next-mdx-remote": "^4.4.1",
